# pycards

./: .gitignore
src/battles_in_antiquity/: generate_blood_cards.py  generate_playing_cards.py  generate_victory_cards.py  pyproject.toml
src/pycards/: pyproject.toml
src/pycards/pycards/: gsheets.py  pdf.py  render.py
