[tool.poetry]
name = "battles_in_antiquity"
version = "0.0.1"
description = ""
authors = ["Jussi Kujala <jussi.kujala@iki.fi>"]

[tool.poetry.dependencies]
python = ">=3.7.1,<4.0"
pandas = "^1.3.4"
Pillow = "^8.4.0"
pycards = {path = "../pycards"}

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = "^21.10b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
