[tool.poetry]
name = "pycards"
version = "0.0.1"
description = "A package to help create card games."
authors = ["Jussi Kujala <jussi.kujala@iki.fi>"]

[tool.poetry.dependencies]
python = ">=3.7.1,<4.0"
pandas = "^1.3.0"
Pillow = "^8.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
